--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
-version: '3.8'
-
 services:
+  iot_emulation:
+    build:
+      context: ./iot-emulation
+    command: ["./gradlew", "run"]
+    depends_on:
+      - broker
+    environment:
+      - MQTT_BROKER=broker
+      - MQTT_PORT=1883
+      - MQTT_TOPIC="sensor/blood-pressure"
+
   digital_twin:
     build:
       context: ./digital-twin-wldt
