--- a/bp-data-source/.gitignore
+++ b/bp-data-source/.gitignore
@@ -1,8 +1,12 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+.idea
 # Ignore Gradle build output directory
 build
 
 # Ignore Firebase Service Account JSON file
-app/src/resources/serviceAccountKey.json
+app/src/main/resources/serviceAccountKey.json
+
+app/paho*
+paho*
