--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "mqtt": "^5.10.4",
     "react": "^19.1.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
